added jakarta support (#859)
* jakarta migration

* jakarta migration

* jakarta migration

* jakarta migration

* jakarta migration

* fixed checkstyle issues and reverted temp changes

* fixed el packages

* set minimum version of java to 11

* fixed formatting

* removed lombok annotations because no support in jaxb plugin

* fixed formatting

* exclude tests for wildfly because not easy to migrate to newest version of wildfly

---------

Co-authored-by: Ruslan Hryn <hryn.external@crxmarkets.com>